-bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
-bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
-bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
-bug: Alert on changing logarithmic scaling removed
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001123: Performance tweak by adding some indices
-feature#0001122: Propagate Host Template changes to related hosts
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0000954: implement --alt-y-grid graph option 
-feature: show basic rrdtool graph options on Graph Template Edit
-feature: Add additional logging to Graph Xport
-feature: Add rows dropdown to deivces, graphs and data sources
-feature: Add device_id and event count to devices
-feature: Add ids to devices, graphs and data sources pages
-feature: Add database repair utility
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122

0.8.7a
-bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
-bug#0001029: Add --autoscale-min (rrdtool 1.2.x only) and --autoscale-max (using upper AND lower limit)
-bug#0001035: Allow for --logarithmic scaling without autoscaling